# cave-teams

./: .gitignore  CLAUDE.md  LAWS.md  README.md  pyproject.toml  test_agent_proofs.py  test_algebra_laws.py  test_blackboard_smoke.py  test_broadcast_smoke.py  test_cave_ops_smoke.py  test_chain_ontology_smoke.py  test_conditions_smoke.py  test_context_engineering_smoke.py  test_dag_smoke.py  test_dsl_smoke.py  test_evolve_smoke.py  test_factory.py  test_frontend_smoke.py  test_gameworld_smoke.py  test_heaven_override_smoke.py  test_integration.py  test_live_cave_team.py  test_live_gameworld.py  test_live_minimax_demo.py  test_live_sse.py  test_live_team_run.py  test_metacog_smoke.py  test_minimax_smoke.py  test_nested_worlds_smoke.py  test_npc_smoke.py  test_primitives_smoke.py  test_runner.py  test_runtime_stacking_smoke.py  test_sdna_agents_smoke.py  test_sdna_chain_smoke.py  test_seam_smoke.py  test_season_smoke.py  test_sim_smoke.py  test_spine.py  test_team.py  (+3 more)
.claude-plugin/: marketplace.json
.claude/rules/: 00-source-of-truth.md  01-the-pattern.md  02-architecture-layers.md  03-topologies-configs-classes.md
.github/workflows/: pages.yml
cave_teams/: __init__.py  _chain_ontology_vendored.py  adaptor.py  algebra.py  blackboard.py  cave.py  chain_ontology.py  cli.py  concurrent.py  conditions.py  context_engineering.py  conversation.py  dag.py  dovetail.py  dsl.py  events.py  evolve.py  flow.py  frontend.py  gallery.html  gameworld.py  harness.py  heaven_minimax.py  jobworld.py  leader.py  links.py  messages.py  metacog.py  npc.py  orchestrator.py  primitives.py  runner.py  runtime.py  sdna_bridge.py  season.py  server.py  session.py  sim.py  team.py  topologies.py  (+2 more)
cave_teams/examples/: __init__.py  claude_p_runtime.py  minimax_runtime.py
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/skills/cave/: SKILL.md  reference.md
plugin/skills/cave-blackboard/: SKILL.md  reference.md
plugin/skills/cave-branch/: SKILL.md  reference.md
plugin/skills/cave-conditions/: SKILL.md  reference.md
plugin/skills/cave-dag/: SKILL.md  reference.md
plugin/skills/cave-dovetail/: SKILL.md  reference.md
plugin/skills/cave-evolve/: SKILL.md  reference.md
plugin/skills/cave-gate/: SKILL.md  reference.md
plugin/skills/cave-metacog/: SKILL.md  reference.md
plugin/skills/cave-parallel/: SKILL.md  reference.md
plugin/skills/cave-season/: SKILL.md  reference.md
plugin/skills/cave-sequential/: SKILL.md  reference.md
plugin/skills/cave-sim/: SKILL.md  reference.md
plugin/skills/cave-teams/: SKILL.md  reference.md
plugin/skills/cave-tournament/: SKILL.md  reference.md
plugin/skills/cave-world/: SKILL.md  reference.md
site/: index.html  style.css
