[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cave-teams"
version = "0.1.1"
description = "Connect AI agents like code — compose any agents into teams with a tiny algebra, all topologies, a programmable message state machine, and a proven-team library. CAVE = Coding Agent Virtualization Environment."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sancovp" }]
keywords = [
    "ai-agents", "agents", "multi-agent", "multi-agent-systems", "agent-orchestration",
    "agent-framework", "ai-agent-framework", "llm", "llm-agents", "llm-orchestration",
    "agentic", "agentic-ai", "agentic-workflow", "claude", "claude-code", "codex", "minimax",
    "orchestration", "agent-teams", "provider-agnostic", "dsl", "cave",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
# One small dependency: pydantic (the typed dovetail model). The chain ontology is vendored.
dependencies = ["pydantic>=2"]

[project.optional-dependencies]
# The bare MiniMax / Anthropic-compatible backend needs the anthropic client.
# (The heaven backend, for real coding agents with tools, is provided by its environment.)
minimax = ["anthropic>=0.40"]

[project.urls]
Homepage = "https://github.com/sancovp/cave-teams"
Repository = "https://github.com/sancovp/cave-teams"

[tool.setuptools.packages.find]
include = ["cave_teams*"]
