[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cave-teams"
version = "0.2.1"
description = "Programmable, LEADER-DRIVEN agent teams on CAVE: a team leader (an intelligent dovetail) orchestrates teammates by writing message files, guard-railed by conditions on messages, on an ephemeral CAVE server. Compose teams with a tiny algebra; run ANY agent runtime (MiniMax/Claude shown). Requires the CAVE runtime."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "sancovp" }]
keywords = [
    "ai-agents", "agents", "multi-agent", "multi-agent-systems", "agent-orchestration",
    "agent-framework", "ai-agent-framework", "llm", "llm-agents", "llm-orchestration",
    "agentic", "agentic-ai", "agentic-workflow", "claude", "claude-code", "codex", "minimax",
    "orchestration", "agent-teams", "provider-agnostic", "dsl", "cave",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
# pip deps: cave-harness (the CAVE runtime — import name `cave`) + pydantic (the typed dovetail
# model) + universal-chain-ontology (the CANONICAL Link/Chain classes — depend-don't-vendor; the
# vendored copy remains only as a last-resort fallback). CAVE is imported lazily, so the package
# imports even without it, but cave_team() needs the CAVE runtime (cave-harness) present.
dependencies = ["cave-harness", "pydantic>=2", "universal-chain-ontology>=0.1.0"]

[project.scripts]
cave-teams = "cave_teams.cli:main"

[project.optional-dependencies]
# The bare MiniMax / Anthropic-compatible backend needs the anthropic client.
# (The heaven backend, for real coding agents with tools, is provided by its environment.)
minimax = ["anthropic>=0.40"]

[project.urls]
Homepage = "https://github.com/sancovp/cave-teams"
Repository = "https://github.com/sancovp/cave-teams"

[tool.setuptools.packages.find]
include = ["cave_teams*"]
